@@ -19,6 +19,8 @@
 
 package org.apache.cassandra.sidecar.client;
 
+import java.time.Duration;
+
 import org.apache.cassandra.sidecar.common.DataObjectBuilder;
 
 /**
@@ -29,16 +31,22 @@ public class SidecarClientConfigImpl implements SidecarClientConfig
     public static final int DEFAULT_MAX_RETRIES = 3;
     public static final long DEFAULT_RETRY_DELAY_MILLIS = 500L;
     public static final long DEFAULT_MAX_RETRY_DELAY_MILLIS = 60_000L;
+    public static final Duration DEFAULT_MINIMUM_HEALTH_RETRY_DELAY = Duration.ofSeconds(1L);
+    public static final Duration DEFAULT_MAXIMUM_HEALTH_RETRY_DELAY = Duration.ofSeconds(5L);
 
     protected final int maxRetries;
     protected final long retryDelayMillis;
     protected final long maxRetryDelayMillis;
+    protected final Duration minimumHealthRetryDelay;
+    protected final Duration maximumHealthRetryDelay;
 
     private SidecarClientConfigImpl(Builder builder)
     {
         maxRetries = builder.maxRetries;
         retryDelayMillis = builder.retryDelayMillis;
         maxRetryDelayMillis = builder.maxRetryDelayMillis;
+        minimumHealthRetryDelay = builder.minimumHealthRetryDelay;
+        maximumHealthRetryDelay = builder.maximumHealthRetryDelay;
     }
 
     /**
@@ -68,6 +76,24 @@ public class SidecarClientConfigImpl implements SidecarClientConfig
         return maxRetryDelayMillis;
     }
 
+    /**
+     * @return the minimum amount of time to wait before retrying a failed health check
+     */
+     @Override
+     public Duration minimumHealthRetryDelay()
+     {
+        return minimumHealthRetryDelay;
+     }
+
+    /**
+     * @return the maximum amount of time to wait before retrying a failed health check
+     */
+     @Override
+     public Duration maximumHealthRetryDelay()
+     {
+        return maximumHealthRetryDelay;
+     }
+
     public static Builder builder()
     {
         return new Builder();
@@ -81,6 +107,8 @@ public class SidecarClientConfigImpl implements SidecarClientConfig
         protected int maxRetries = DEFAULT_MAX_RETRIES;
         protected long retryDelayMillis = DEFAULT_RETRY_DELAY_MILLIS;
         protected long maxRetryDelayMillis = DEFAULT_MAX_RETRY_DELAY_MILLIS;
+        protected Duration minimumHealthRetryDelay = DEFAULT_MINIMUM_HEALTH_RETRY_DELAY;
+        protected Duration maximumHealthRetryDelay = DEFAULT_MAXIMUM_HEALTH_RETRY_DELAY;
 
         protected Builder()
         {
@@ -123,6 +151,28 @@ public class SidecarClientConfigImpl implements SidecarClientConfig
         public Builder maxRetryDelayMillis(long maxRetryDelayMillis)
         {
             return update(b -> b.maxRetryDelayMillis = maxRetryDelayMillis);
+        }
+
+        /**
+         * Sets the {@code minimumHealthRetryDelay} and returns a reference to this Builder enabling method chaining
+         *
+         * @param minimumHealthRetryDelay the {@code minimumHealthRetryDelay} to set
+         * @return a reference to this Builder
+         */
+        public Builder minimumHealthRetryDelay(Duration minimumHealthRetryDelay)
+        {
+            return update(builder -> builder.minimumHealthRetryDelay = minimumHealthRetryDelay);
+        }
+
+        /**
+         * Sets the {@code maximumHealthRetryDelay} and returns a reference to this Builder enabling method chaining
+         *
+         * @param maximumHealthRetryDelay the {@code maximumHealthRetryDelay} to set
+         * @return a reference to this Builder
+         */
+        public Builder maximumHealthRetryDelay(Duration maximumHealthRetryDelay)
+        {
+            return update(builder -> builder.maximumHealthRetryDelay = maximumHealthRetryDelay);
         }
 
         /**
